crates/kata-driver/tests/snapshots/examples_snapshot__snapshot_exemplos_kata@legacy__test_match_exhaust.snap
---
source: crates/kata-driver/tests/examples_snapshot.rs
expression: output
---
--- stderr ---
Error: parse.unexpected_token

  × token inesperado: esperado `variant name`, encontrado `|`
   ╭─[/home/arthur/workspace/Kata5/crates/kata-driver/../../examples/legacy/test_match_exhaust.kata:3:5]
 2 │ enum Cor
 3 │     | Azul
   ·     ─
 4 │     | Verde
   ╰────
