crates/kata-driver/tests/snapshots/examples_snapshot__snapshot_exemplos_kata@legacy__test_match_stmt.snap
---
source: crates/kata-driver/tests/examples_snapshot.rs
expression: output
---
--- stderr ---
Error: parse.unexpected_token

  × token inesperado: esperado ``:` após pattern do braço`, encontrado `100`
   ╭─[/home/arthur/workspace/Kata5/crates/kata-driver/../../examples/legacy/test_match_stmt.kata:6:13]
 5 │     match x
 6 │         > _ 100: echo!("alto")
   ·             ─┬─
   ·              ╰── token inesperado
 7 │         > _ 50: echo!("medio")
   ╰────
