crates/kata-driver/tests/snapshots/examples_snapshot__snapshot_exemplos_kata@legacy__test_maxmin.snap
---
source: crates/kata-driver/tests/examples_snapshot.rs
expression: output
---
--- stderr ---
Error: type.unbound_name

  × nome `$` não está no escopo
    ╭─[/home/arthur/workspace/Kata5/crates/kata-driver/../../examples/legacy/test_maxmin.kata:16:14]
 15 │ action main
 16 │     let m := $(max 10 20)
    ·              ─
 17 │     echo!($(str m))
    ╰────
  help: você quis dizer `*`, `+`, `-`?
