crates/kata-driver/tests/snapshots/examples_snapshot__snapshot_exemplos_kata@legacy__test_mixed.snap
---
source: crates/kata-driver/tests/examples_snapshot.rs
expression: output
---
--- stderr ---
Error: parse.unexpected_token

  × token inesperado: esperado `INDENT (interface signatures)`, encontrado
  │ `<STMT_SEP>`
   ╭─[/home/arthur/workspace/Kata5/crates/kata-driver/../../examples/legacy/test_mixed.kata:1:1]
 1 │ interface NUM
   · ▲
 2 │ 
   ╰────
