crates/kata-driver/tests/snapshots/examples_snapshot__snapshot_exemplos_kata@legacy__test_parallel_stress.snap
---
source: crates/kata-driver/tests/examples_snapshot.rs
expression: output
---
--- stderr ---
Error:   × erro de resolução (Pass 1): [UnknownDirective { name: "parallel", context:
  │ "action", item_name: "cpu_infinita" }]
