crates/kata-driver/tests/snapshots/examples_snapshot__snapshot_exemplos_kata@legacy__test_phase10.snap
---
source: crates/kata-driver/tests/examples_snapshot.rs
expression: output
---
--- stderr ---
Error: parse.unexpected_token

  × token inesperado: esperado ``)` para fechar destructuring`, encontrado
  │ `rx`
   ╭─[/home/arthur/workspace/Kata5/crates/kata-driver/../../examples/legacy/test_phase10.kata:8:13]
 7 │     # Teste 1: Canal Rendezvous (channel!())
 8 │     let (tx rx) := channel!()
   ·             ─┬
   ·              ╰── token inesperado
 9 │     echo!("Canal Rendezvous criado (tx, rx)")
   ╰────
