crates/kata-driver/tests/snapshots/examples_snapshot__snapshot_exemplos_kata@legacy__test_phase8_stdlib.snap
---
source: crates/kata-driver/tests/examples_snapshot.rs
expression: output
---
--- stderr ---
Error: parse.unexpected_token

  × token inesperado: esperado `expression`, encontrado `,`
   ╭─[/home/arthur/workspace/Kata5/crates/kata-driver/../../examples/legacy/test_phase8_stdlib.kata:7:23]
 6 │ action main
 7 │     let my_list2 := [1, 2]
   ·                       ┬
   ·                       ╰── token inesperado
 8 │     let my_list3 := [1, 2]
   ╰────
