crates/kata-driver/tests/snapshots/examples_snapshot__snapshot_exemplos_kata@legacy__test_phase9.snap
---
source: crates/kata-driver/tests/examples_snapshot.rs
expression: output
---
--- stderr ---
Error: parse.unexpected_token

  × token inesperado: esperado `INDENT (implements methods)`, encontrado
  │ `<STMT_SEP>`
   ╭─[/home/arthur/workspace/Kata5/crates/kata-driver/../../examples/legacy/test_phase9.kata:1:1]
 1 │ # Teste de Validação — Fase 9
   · ▲
   · ╰── token inesperado
 2 │ # Introspecção, Tipos, Global Implements e Templates (format)
   ╰────
