crates/kata-driver/tests/snapshots/examples_snapshot__snapshot_exemplos_kata@legacy__test_pipeline.snap
---
source: crates/kata-driver/tests/examples_snapshot.rs
expression: output
---
--- stderr ---
Error: parse.unexpected_token

  × token inesperado: esperado ``::` após nome do parâmetro`, encontrado `)`
   ╭─[/home/arthur/workspace/Kata5/crates/kata-driver/../../examples/legacy/test_pipeline.kata:7:20]
 6 │ 
 7 │ action produtor (ch)
   ·                    ─
 8 │     var arr := {1 2 3 4 5}
   ╰────
