crates/kata-driver/tests/snapshots/examples_snapshot__snapshot_exemplos_kata@legacy__test_queue.snap
---
source: crates/kata-driver/tests/examples_snapshot.rs
expression: output
---
--- stderr ---
Error: parse.unexpected_token

  × token inesperado: esperado ``)``, encontrado `rx`
   ╭─[/home/arthur/workspace/Kata5/crates/kata-driver/../../examples/legacy/test_queue.kata:3:13]
 2 │     match queue!(3)
 3 │         (tx rx):
   ·             ─┬
   ·              ╰── token inesperado
 4 │             1 !> tx
   ╰────
